-Fixed image white space problem in iOS
--added img width 100%

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ img {
     object-fit: contain;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .icon {
